--- a/CarTrackCodeChallenge/CarTrackCodeChallenge/Reusables/Views/Textfield/FloatingPlaceholderTextfieldView/FloatingPasswordPlaceholderTextView/FloatingPasswordPlaceholderTextView.xib
+++ b/CarTrackCodeChallenge/CarTrackCodeChallenge/Reusables/Views/Textfield/FloatingPlaceholderTextfieldView/FloatingPasswordPlaceholderTextView/FloatingPasswordPlaceholderTextView.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FloatingPasswordPlaceholderTextView" customModule="Speshe" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FloatingPasswordPlaceholderTextView" customModule="CarTrackCodeChallenge" customModuleProvider="target">
             <connections>
                 <outlet property="constraintFloatingMode" destination="6bN-PZ-ywT" id="2w9-u9-m9K"/>
                 <outlet property="constraintPlaceholderMode" destination="cwY-Jw-dMF" id="4U2-iK-0HC"/>
@@ -23,21 +23,21 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vL7-j3-R3b" userLabel="TextFieldView">
-                    <rect key="frame" x="10" y="16" width="230" height="44"/>
+                    <rect key="frame" x="0.0" y="16" width="250" height="44"/>
                     <subviews>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="20s-fs-19A">
-                            <rect key="frame" x="10" y="0.0" width="220" height="44"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="20s-fs-19A">
+                            <rect key="frame" x="0.0" y="0.0" width="250" height="44"/>
                             <color key="backgroundColor" systemColor="systemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghG-lx-3TX">
-                            <rect key="frame" x="190" y="7" width="30" height="30"/>
+                            <rect key="frame" x="210" y="7" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="06u-0e-jJ5"/>
                                 <constraint firstAttribute="width" secondItem="ghG-lx-3TX" secondAttribute="height" multiplier="1:1" id="I0x-bG-edJ"/>
                             </constraints>
-                            <state key="normal" image="passwordview"/>
+                            <state key="normal" image="passwordShow"/>
                             <connections>
                                 <action selector="toggleAction:" destination="-1" eventType="touchUpInside" id="2yq-Kc-lQE"/>
                             </connections>
@@ -47,7 +47,7 @@
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="ghG-lx-3TX" secondAttribute="trailing" constant="10" id="4eP-bV-gQQ"/>
                         <constraint firstAttribute="trailing" secondItem="20s-fs-19A" secondAttribute="trailing" id="6SJ-BD-TEh"/>
-                        <constraint firstItem="20s-fs-19A" firstAttribute="leading" secondItem="vL7-j3-R3b" secondAttribute="leading" constant="10" id="SnC-J6-dpe"/>
+                        <constraint firstItem="20s-fs-19A" firstAttribute="leading" secondItem="vL7-j3-R3b" secondAttribute="leading" id="SnC-J6-dpe"/>
                         <constraint firstAttribute="height" constant="44" id="VfD-iY-FA7"/>
                         <constraint firstItem="ghG-lx-3TX" firstAttribute="centerY" secondItem="vL7-j3-R3b" secondAttribute="centerY" id="Z34-wd-91C"/>
                         <constraint firstItem="20s-fs-19A" firstAttribute="top" secondItem="vL7-j3-R3b" secondAttribute="top" id="ac6-d9-2l9"/>
@@ -66,7 +66,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AQl-dU-Muv">
-                    <rect key="frame" x="10" y="0.0" width="240" height="16"/>
+                    <rect key="frame" x="0.0" y="0.0" width="250" height="16"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qE1-oa-GzR">
                             <rect key="frame" x="10" y="30" width="33" height="16"/>
@@ -84,12 +84,12 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="AQl-dU-Muv" firstAttribute="leading" secondItem="17o-AT-jiM" secondAttribute="leading" constant="10" id="203-Ga-Krl"/>
+                <constraint firstItem="AQl-dU-Muv" firstAttribute="leading" secondItem="17o-AT-jiM" secondAttribute="leading" id="203-Ga-Krl"/>
                 <constraint firstAttribute="bottom" secondItem="vL7-j3-R3b" secondAttribute="bottom" id="5oU-c5-YrK"/>
-                <constraint firstItem="vL7-j3-R3b" firstAttribute="leading" secondItem="17o-AT-jiM" secondAttribute="leading" constant="10" id="FPS-bP-lgT"/>
+                <constraint firstItem="vL7-j3-R3b" firstAttribute="leading" secondItem="17o-AT-jiM" secondAttribute="leading" id="FPS-bP-lgT"/>
                 <constraint firstItem="AQl-dU-Muv" firstAttribute="bottom" secondItem="vL7-j3-R3b" secondAttribute="top" id="HR7-TU-8EQ"/>
                 <constraint firstAttribute="trailing" secondItem="AQl-dU-Muv" secondAttribute="trailing" id="Mwk-H9-JDV"/>
-                <constraint firstAttribute="trailing" secondItem="vL7-j3-R3b" secondAttribute="trailing" constant="10" id="R9B-51-ZfT"/>
+                <constraint firstAttribute="trailing" secondItem="vL7-j3-R3b" secondAttribute="trailing" id="R9B-51-ZfT"/>
                 <constraint firstItem="qE1-oa-GzR" firstAttribute="centerY" secondItem="20s-fs-19A" secondAttribute="centerY" priority="750" id="cwY-Jw-dMF"/>
                 <constraint firstItem="AQl-dU-Muv" firstAttribute="top" secondItem="17o-AT-jiM" secondAttribute="top" id="jCv-1h-XB1"/>
             </constraints>
@@ -99,7 +99,7 @@
         </view>
     </objects>
     <resources>
-        <image name="passwordview" width="25" height="25"/>
+        <image name="passwordShow" width="25" height="25"/>
         <namedColor name="placeHolderText">
             <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
