--- a/CarTrackCodeChallenge/CarTrackCodeChallenge/Reusables/Views/Textfield/FloatingPlaceholderTextfieldView/FloatingPlaceholderTextfieldView.xib
+++ b/CarTrackCodeChallenge/CarTrackCodeChallenge/Reusables/Views/Textfield/FloatingPlaceholderTextfieldView/FloatingPlaceholderTextfieldView.xib
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FloatingPlaceholderTextfieldView" customModule="PrivatePod4" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FloatingPlaceholderTextfieldView" customModule="CarTrackCodeChallenge" customModuleProvider="target">
             <connections>
                 <outlet property="constraintFloatingMode" destination="zMz-5s-0L6" id="Ih2-eN-ED8"/>
                 <outlet property="constraintPlaceholderMode" destination="GFN-8D-JJT" id="dH1-WS-iLg"/>
@@ -39,7 +39,7 @@
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                            <real key="value" value="22"/>
+                            <real key="value" value="0.0"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
