--- a/CarTrackCodeChallenge/CarTrackCodeChallenge/Reusables/Views/Textfield/FloatingPlaceholderTextfieldView/FloatingPasswordPlaceholderTextView/FloatingPasswordPlaceholderTextView.xib
+++ b/CarTrackCodeChallenge/CarTrackCodeChallenge/Reusables/Views/Textfield/FloatingPlaceholderTextfieldView/FloatingPasswordPlaceholderTextView/FloatingPasswordPlaceholderTextView.xib
@@ -61,7 +61,7 @@
                             <real key="value" value="0.5"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                            <color key="value" name="placeHolderText"/>
+                            <color key="value" name="placeholderText"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
@@ -101,6 +101,9 @@
     <resources>
         <image name="passwordShow" width="25" height="25"/>
         <namedColor name="placeHolderText">
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="placeholderText">
             <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
